// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvailableDays /> should re-render after update 1`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Mon
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Tue
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Wed
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Thu
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Fri
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
  <div
    class="sc-bczRLJ bbkjqh"
  >
    <button
      class="sc-gsnTZi kKvmkM"
      type="button"
    />
  </div>
</DocumentFragment>
`;

exports[`<AvailableDays /> should re-render after update 2`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Mon
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Tue
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Wed
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Thu
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Fri
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
  <div
    class="sc-bczRLJ bbkjqh"
  >
    <button
      class="sc-gsnTZi kKvmkM"
      type="button"
    />
  </div>
</DocumentFragment>
`;

exports[`<AvailableDays /> should re-render after update 3`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Mon
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Tue
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Wed
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Thu
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Fri
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
  <div
    class="sc-bczRLJ bbkjqh"
  >
    <button
      class="sc-gsnTZi kKvmkM"
      type="button"
    />
  </div>
</DocumentFragment>
`;

exports[`<AvailableDays /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Mon
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Tue
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Wed
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Thu
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Fri
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      class="circle-wrapper"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
</DocumentFragment>
`;
